--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub pages.</p>
+        <h1>Montreal Benesch's personal website</h1>
+        <p>Currently under construction (obviously)</p>
+        <p>I can be contacted at montrealbenesch[at]duck[dot]com</p>
     </body>
 </html>
